Adcionando um pouco de história

--- a/PEX/landpage.html
+++ b/PEX/landpage.html
@@ -42,7 +42,7 @@
 
     <section id="historia">
         <h2>O surgimento da Assembléia de Deus Ministério de Taubaté - SP em Carvalhos-MG</h2>
-        <p>Fundada na cidade de Carvalhos - MG em 1986, a Assembléia de Deus Ministério de Taubaté - Carvalhos tem muita história para contar.</p>
+        <p>Fundada na cidade de Carvalhos - MG em 1986, a Assembléia de Deus Ministério de Taubaté - Carvalhos tem muita história para contar. Tendo como primeiro pastor o Pr. ....</p>
     </section>
 
     <section id="trabalhos">
