--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>Endereços Sede e Congregações</h2>
         <h3><strong>Sede</strong></h3>
         <ul>
-            <li>Bairro Bela Vista</li>
+            <li>Bairro Prodecon</li>
         </ul>
         <h3><strong>Congregações</strong></h3>
         <ul>
