Atualizar o index.html
Informações sobre a data oficial da criação da igreja e o responsável a frente.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <section id="historia">
             <h2>O Surgimento da Assembleia de Deus Ministério de Taubaté em Carvalhos</h2>
           
-            <p>Tudo começou em 1987, quando o Senhor, em Sua infinita graça, plantou uma semente de fé no coração do pastor Hermes Pereira e do pastor presidente José Ezequiel da Silva. Assim nasceu, na Rua José Dantas Motta, nº 23, a Assembleia de Deus Ministério de Taubaté em Carvalhos - MG.<br></p>
+            <p>Tudo começou em 26 de junho de 1986, quando o Senhor, em Sua infinita graça, plantou uma semente de fé no coração do pastor da cidade de Aiuruoca, Hermes Pereira e do pastor presidente da Assembleia de Deus Ministério Taubaté José Ezequiel da Silva. Assim nasceu, na Rua José Dantas Motta, nº 23, a Assembleia de Deus Ministério de Taubaté em Carvalhos - MG.</p>
+
+            <p>A mesma ficou sob os cuidados do evangelista Ezequiel Moreira até 1991<br></p>
+
             <p><br>Uma pequena chama que, com amor, oração e trabalho, cresceu para iluminar muitas vidas.</br></p>
           
             <p><br>Em 1991, Deus, em sua perfeita direção, enviou o pastor Sebastião dos Santos. Por 15 anos, ele serviu com fidelidade, guiando o povo com paciência, ensinando a Palavra e fortalecendo os laços da comunidade.</br></p>
