Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h4>Bairro Posses</h4>
         <ul>
             <li>Domingo: 19h - Culto Público</li>
-            <li>Quarta-feira: 19:30h - Culto Público</li>
+            <li>Quinta-feira: 19:30h - Culto Público</li>
         </ul>
         <h4>Bairro Vargem Alegre</h4>
         <ul>
